<resources>
    <string name="app_name">Loan Money</string>
    <string name="btn_label_authentication">Войти в личный кабинет</string>
    <string name="btn_label_registration">Регистрация</string>
    <string name="label_app">Loan Money</string>
    <string name="tv_label_registration_fragment">Регистрация</string>
    <string name="et_hint_name_user">Логин</string>
    <string name="et_hint_password_user">Пароль</string>
    <string name="btn_label_continue">Продолжить</string>
    <string name="btn_label_log_in">Войти</string>
    <string name="tv_label_authentication_fragment">Авторизация</string>

    <string name="name_loan_state_approved">Утвержден</string>
    <string name="name_loan_state_registered">Зарегистрирован</string>
    <string name="name_loan_state_rejected">Отклонен</string>
    <string name="name_loan_state_default">Неизвестно</string>

    <string name="start_date_string_in_list">Запрос от </string>
    <string name="label_first_name_in_profile">Имя:</string>
    <string name="label_last_name_in_profile">Фамилия:</string>
    <string name="label_phone_in_profile">Телефон:</string>
    <string name="tv_label_date_in_profile_loan">Дата:</string>
    <string name="tv_label_amount_in_profile_loan">Сумма (рубли):</string>
    <string name="tv_label_period_in_profile_loan">Период (количество дней):</string>
    <string name="tv_label_percent_in_profile_loan">Процент:</string>
    <string name="tv_label_state_in_profile">Состояние запроса:</string>
    <string name="tv_instruction_loan">После того, как статус вашего запроса будет \"Утвержден\", вы сможете получить займ удобным вам способом:</string>
    <string name="iv_content_description">профиль</string>
    <string name="tv_first_method_of_obtaining_loan">Переводом на банковскую карту, предварительно привязав ее в приложении</string>
    <string name="tv_second_method_of_obtaining_loan">Наличными, обратившись в наше отделение с паспортом</string>
    <string name="et_hint_first_name_in_registration_loan">Имя</string>
    <string name="et_hint_last_name_in_registration_loan">Фамилия</string>
    <string name="et_hint_phone_in_registration_loan">Телефон</string>
    <string name="tv_label_amount_in_registration_loan">Сумма займа (рубли):</string>
    <string name="tv_label_period_in_registration_loan">Срок займа (дни):</string>
    <string name="tv_label_percent_in_registration_loan">Процент:</string>
    <string name="btn_label_in_registration_loan">Оформить заявку</string>
    <string name="tv_register_loan_success">Ваш запрос успешно отправлен</string>
    <string name="tv_register_loan_description">Следите за статусом вашего запроса в списке всех займов</string>
    <string name="btn_label_navigate_in_loans_list">Перейти в список займов</string>
    <string name="btn_label_in_explanation_after_registration">Начать</string>
    <string name="tv_item_register_loan_in_explanation">Заполните простую заявку на займ</string>
    <string name="tv_item_approval_time_in_explanation">Дождитесь одобрения</string>
    <string name="tv_obtain_money_in_explanation">Получите деньги переводом на карту или наличными в офисе</string>

    <string name="title_notification">Срок займов истекает</string>
    <string name="text_1_part_notification">У вас имеются неоплаченные займы.</string>
    <string name="text_2_part_notification">Общее количество:</string>
    <string name="text_3_part_notification">Перейдите в приложение для просмотра.</string>
    <string name="tv_label_language_settings">Язык:</string>
    <string name="rb_russian_language">Русский</string>
    <string name="rb_english_language">English</string>
    <string name="item_menu_settings">Настройки</string>

    <string name="message_empty_fields">Заполните все поля</string>
    <string name="message_user_not_found">Не удается войти. Такого пользователя не существует</string>
    <string name="message_user_exists">Пользователь с таким именем уже существует</string>

</resources>