<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.settings.ui.SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_top_in_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start_in_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end_in_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_exit_to_app"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_end_in_settings"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_top_in_settings" />

    <TextView
        android:id="@+id/tv_label_language_settings"
        style="@style/tv_label_without_icon"
        android:text="@string/tv_label_language_settings"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_end_in_settings"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start_in_settings"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_end_in_settings"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start_in_settings"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_language_settings">

        <RadioButton
            android:id="@+id/rb_russian_language"
            style="@style/rb_style"
            android:text="@string/rb_russian_language" />

        <RadioButton
            android:id="@+id/rb_english_language"
            style="@style/rb_style"
            android:text="@string/rb_english_language" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>