<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/padding_vertical_big"
        tools:context=".features.startWindow.ui.StartFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <ImageView
            android:id="@+id/iv_logo_start_window"
            android:layout_width="@dimen/size_logo_on_start"
            android:layout_height="@dimen/size_logo_on_start"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_top" />

        <TextView
            android:id="@+id/tv_label_app"
            style="@style/logo_on_start"
            android:layout_marginTop="12dp"

            android:text="@string/label_app"
            app:layout_constraintBottom_toTopOf="@+id/btn_open_registration_window"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo_start_window"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Button
            android:id="@+id/btn_open_registration_window"
            style="@style/button_style"
            android:layout_marginTop="200dp"
            android:text="@string/btn_label_registration"
            app:layout_constraintBottom_toTopOf="@+id/btn_open_login_window"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_app" />

        <Button
            android:id="@+id/btn_open_login_window"
            style="@style/button_style"
            android:text="@string/btn_label_authentication"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start" />

        <!--    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_above_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="180dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_above_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="320dp" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
